--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history:
 
+3.11 - Sun Aug 14 2005
+        - The textual fields of "title", "author" and "released" were
+          handled as Unicode. They were supposed to be ISO 8859-1 ASCII
+          single-byte chars in SID files. This is now enforced when doing
+          a set(), write() or validate().
+        - getC64BASIC() returned undef for RSIDs, which was incorrect.
+
 3.10 - Sun Jul 17 2005
         - Fixed MD5 calculation for RSIDs.
         - The 'name' field is now called 'title' for consistency with
